# cathedral

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release-image.yml
cathedral/: Cargo.toml
cathedral/src/: cli.rs  db.rs  main.rs  schema.rs  web.rs
cathedral/src/db/: function.rs  mod.rs  schema.rs
cathedral/src/web/: action.rs  error.rs  mod.rs  schema.rs
dropkick/: Cargo.toml
dropkick/src/: lib.rs
fascination/: Cargo.toml
fascination/src/: cli.rs  data.rs  db.rs  main.rs  parser.rs
lyricism/: Cargo.toml
lyricism/examples/: lyricism-basic.rs
lyricism/src/: costs.rs  distance.rs  lib.rs
sql/: 01-initial_setup.sql  20230619-initial_setup.sql
table-importer/: Cargo.toml
