[workspace]
members = ["cathedral", "fascination", "dropkick", "lyricism"]

[workspace.dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
lyricism = { path = "./lyricism" }
dropkick = { path = "./dropkick" }
once_cell = "1.18.0"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.2", features = ["full"] }

[profile.release]
lto = "fat"
strip = "debuginfo"
