[workspace]
members = ["cathedral", "fascination", "dropkick", "lyricism"]

[workspace.dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
lyricism = { path = "./lyricism" }
dropkick = { path = "./dropkick" }
once_cell = "1.18.0"
rand = "0.8.5"
sqlx = { version = "0.7.0-alpha.3", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }

[profile.release]
lto = "fat"
strip = "debuginfo"
