[package]
name = "cathedral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = "0.6.18"
clap = { workspace = true }
lyricism = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
