[package]
name = "fascination"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dropkick = { workspace = true }
once_cell = { workspace = true }
scraper = "0.16.0"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.28.2", features = ["full"] }
